[package]
name = "ai-tools-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Shared core types and utilities for the Rust AI coding toolchain — Finding, Severity, Confidence, SARIF renderer, git/cargo utils, secret scrubbing, unified config"
license = "MIT OR Apache-2.0"
repository = "https://github.com/asmuelle/ai-tools-core"
readme = "README.md"
keywords = ["cli", "ai", "coding", "tools", "sarif"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
thiserror = "1"
globset = "0.4"
sha2 = "0.10"
log = "0.4"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
